[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "calculadora_bombeo"
version = "0.0.1"
authors = [
  {name="Eimar Garcia",email="eimarg522@gmail.com"}
  {name="Bryan Cadena",email="___@gmail.com"}
]
description = "Este programa brinda los calculos necesario s para determinar una bomba que sea capaz de suplir las necesidades requeridas por el usuario"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"